[package]
name = "pcode-rs"
authors = ["Haoyu Xiao <xhwhy16@gmail.com>"]
description = "Machine code disassembly and IR translation library for Rust using the excellent SLEIGH library from the Ghidra framework."
readme = "README.md"
repository = "https://github.com/XYlearn/pcode-rs"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2.0"
petgraph = "0.8.1"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
